--- a/pages/home.css
+++ b/pages/home.css
@@ -38,7 +38,7 @@ main{
      "telefone telefone" ;
     background-color: gray;
     height: 250px;
-    width: 50vw;
+    width: 40vw;
     padding: 10px;
     margin: 20px 10px;
 }
@@ -143,7 +143,19 @@ input{
     color: #fff;
 }
 
-@media screen and (max-width: 803px) {
+.textFooter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 50px;
+    background-color: #fff;
+    color: #04C9F4;
+    position: absolute;
+    bottom: 0;
+}
+
+@media screen and (max-width: 854px) {
     .container{
         width: 70vw;
         margin: 20px 1vw;
