--- a/pages/home.css
+++ b/pages/home.css
@@ -143,7 +143,7 @@ input{
     color: #fff;
 }
 
-.textFooter{
+.footer{
     display: flex;
     justify-content: center;
     align-items: center;
